--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,9 @@
                    class="nav-link {% if request.path == '/' %}active{% endif %}">
                    Home
                 </a>
-                <a href="#" class="nav-link">Community</a>
+                <a href="{% url 'discovery:show_post' %}" class="nav-link">
+                    Community
+                </a>
                 <a href="#" class="nav-link">Wishlist</a>
                 <a href="#" class="nav-link">Reviews</a>
             </div>
