fix product details

--- a/main/templates/recommendations.html
+++ b/main/templates/recommendations.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<title>Rekomendasi Nyarap</title>
 {% include 'navbar.html' %}
 <div class="min-h-screen bg-gray-50 py-0 mt-0">
     
