--- a/main/templates/recommendation_list.html
+++ b/main/templates/recommendation_list.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<title>Rekomendasi Nyarap</title>
 {% include 'navbar.html' %}
 <div class="min-h-screen bg-gray-50 py-12 mt-12">
     <div class="max-w-6xl mx-auto">
