--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,7 +13,7 @@
     
     <!-- Description Section -->
     <div style="width: 100%; text-align: center; color: #9CA8B7; font-size: 16px; font-family: Poppins ; margin-bottom: 20px;">
-        Temukan tempat sarapan favorit di Depok dengan Nyarap @Depok.
+        Temukan tempat sarapan terbaik di Depok dengan Nyarap @Depok.
     </div>
 
     <!-- Social Media Icons -->
